# cyber-beep

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  server.toml
migrations/: 20210919084527_init.sql
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/config/: constants.rs  database.rs  mod.rs  shutdown.rs  tracing.rs
server/src/domain/: dto.rs  mod.rs  payload.rs  prelude.rs  users.rs
server/src/domain/entity/: mod.rs  users.rs
server/src/entity/: mod.rs  prelude.rs  users.rs
server/src/error/: mod.rs
server/src/extract/: mod.rs
server/src/handler/: index.rs  mod.rs  users.rs
server/src/web/: index.rs  mod.rs
