[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async runtime
tokio = { version = "1.11.0", features = ["full"] }

# framework for web server
axum = { version = "0.2.4", features = ["ws", "headers", "multipart"] }

# config
dotenv = "0.15.0"
figment = { version = "0.10.6", features = ["env", "toml"] }

# framework for serializing and deserializing
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "1.10.0"

# error handle
anyhow = { version = "1.0.44", features = ["backtrace"] }
thiserror = "1.0.29"

# structured logging
tracing = "0.1.28"
tracing-subscriber = "0.2.23"

# async and dynamic orm
sea-orm = { version = "0.2.2", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"], default-features = false }

# tools
num_cpus = "1.13.0"
