[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# async runtime
tokio = { version = "1.11.0", features = ["full"] }

# framework for handler server
axum = { version = "0.2.5", features = ["ws", "headers", "multipart"] }
tower = { version = "0.4.8", features = ["timeout"] }
tower-http = { version = "0.1.1", features = ["trace"] }

# config
dotenv = "0.15.0"
figment = { version = "0.10.6", features = ["env", "toml"] }

# framework for serializing and deserializing
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_with = "1.10.0"

# error handle
anyhow = { version = "1.0.44", features = ["backtrace"] }
thiserror = "1.0.29"

# structured logging
tracing = "0.1.28"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.24"

# async and dynamic orm
sqlx-core = "0.5.7"
sea-orm = { version = "0.2.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"], default-features = false }

# tools
num_cpus = "1.13.0"
validator = { version = "0.14.0", features = ["derive"] }
